# AffineInvariantSamplers

./: .gitignore  LICENSE  README.md  autocorrelation_func.py  exp-Gaussian-slurm.sbatch  exp-SPDE-slurm.sbatch  exp-ring-slurm.sbatch  experiments_Allen-Cahn.py  experiments_Gaussian-slurm.py  experiments_Gaussian.py  experiments_ring.py  pyproject.toml  samplers.py  test-experiments_Gaussian.ipynb  test-experiments_SPDEs-thin-in.ipynb
dev/: bps.py  bps_walk.py  dfgmvi.py  gmbbvi.py  gvi.py  zigzag_walk.py
develop/: README.md  bps_walk.py  dfgmvi.py  ig.py  zigzag.py  zigzag_walk.py
examples/: example_funnel.py  example_gaussian.py  example_init_rosenbrock.py  example_light_tail_gndr.py  example_light_tail_gndr_identity_precond.py  example_rosenbrock.py  example_rosenbrock_unadjusted.py  run_ensemble.py  run_funnel_compare.py  run_funnel_ensemble_dr.py  run_funnel_gndr.py  run_funnel_hmc.py  run_funnel_kalman_dr.py  run_funnel_peaches.py  run_samplers.py
experiments/: anisotropic-plot.py  experiments_Allen-Cahn-slurm.py  experiments_ring-slurm.py  experiments_rosenbrock.py  plot-scaling.ipynb  test-experiments_Gaussian-thin-in.ipynb
other-samplers/: NUTs.py  NUTs_with_dual_averaging.py  affine-invariant-delayed-rejection.ipynb  hmw-NUTs_with_dual_averaging.py  hmw-adapt-stepsize.py  plot_AllenCahn-autocorrelation_time.py  plot_Gaussian-cond1000-autocorrelation_time copy.py
other-samplers/EnsembleBPS/: EnsembleBPS.py
tests/: test_diagnostics.py  test_smoke.py
variants-of-hwm-samplers/: hmw-NUTs_with_dual_averaging.py  hmw-affineinvarant-NUTs.py
(+59 files in other folders)
